Fix content grid spacing, font colors, gaps, alignment

--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 :root {
   --theme-color: rgb(2, 161, 234);
   --box-shadow: 0 4px 8px -4px rgba(0, 0, 0, 0.35);
+  --title-color: black;
+  --description-color: rgb(83, 83, 83);
 }
 
 body {
@@ -214,7 +216,9 @@ body {
   margin-right: 16px;
 }
 
-.projects .card {
+.card {
+  display: grid;
+  grid-template-rows: 1fr 3fr 1fr;
   background-color: #FFFFFF;
   color: black;
   text-align: left;
@@ -226,23 +230,41 @@ body {
   border-left: 8px solid #f0c03c;
 }
 
-.card p {
-  color: rgb(38, 38, 38);
+.card-title {
+  color: var(--title-color);
+  font-weight: 600;
+  font-size: 16px;
+  text-align: left;
+  align-self: end;
+  margin: 0px;
+}
+
+.card-description {
+  color: var(--description-color);
+  align-self: start;
   font-weight: normal;
   font-size: 14px;
-  overflow: hidden;
+  overflow: scroll;
   display: -webkit-box;
   -webkit-line-clamp: 5;
   line-clamp: 5;
   -webkit-box-orient: vertical;
   text-overflow: ellipsis;
+  align-self: start;
+  margin: 0px;
 }
 
-.card .card-title {
-  color: black;
-  font-weight: 600;
-  font-size: 16px;
-  text-align: left;
+.card-button-grid {
+  display: grid;
+  grid-template-columns: 3fr repeat(3, 1fr);
+  justify-items: end;
+  align-items: center;
+  margin-right: 12px;
+}
+
+.card-button {
+  filter: invert(21%) sepia(52%) saturate(7%) hue-rotate(6deg) brightness(98%) contrast(85%);
+  max-width: 24px;
 }
 
 .news {
@@ -251,6 +273,7 @@ body {
   grid-column: 2;
   grid-row: 1 / 2;
   align-items: start;
+  row-gap: 12px;
 }
 
 .announcements {
@@ -268,7 +291,6 @@ body {
 }
 
 .announcement p {
-  color: rgb(38, 38, 38);
   font-weight: normal;
   font-size: 12px;
   overflow: hidden;
@@ -280,13 +302,14 @@ body {
 }
 
 .announcement .announcement-title {
-  color: black;
+  color: var(--title-color);
   font-weight: 600;
   font-size: 14px;
   text-align: left;
 }
 
 .announcement {
+  color: var(--description-color);
   border-bottom: 1px solid #ddd;
   margin: 0px 20px 0px 20px;
   padding: 10px;
@@ -323,10 +346,11 @@ body {
 }
 
 .trending-username {
-  font-weight: 600;
+  color: var(--title-color);
   font-size: 12px;
 }
 
 .trending-project {
+  color: var(--description-color);
   font-size: 12px;
 }
